--- a/annotation-file-utilities/build.gradle
+++ b/annotation-file-utilities/build.gradle
@@ -62,7 +62,8 @@ dependencies {
     }
     implementation files('../asmx/bin/')
 
-    testImplementation group: 'junit', name: 'junit', version: '4.13'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testImplementation 'org.checkerframework:checker-qual:3.4.0'
 }
 
@@ -171,6 +172,10 @@ task skinnyJar(type: ShadowJar, dependsOn: compileJava) {
 }
 
 test {
+    useJUnitPlatform {
+        includeEngines 'junit-jupiter'
+        excludeEngines 'junit-vintage'
+    }
     testLogging {
         showStandardStreams = true
         // Always run the tests
